Fixed masthead parallax on smaller screens

--- a/css/main.scss
+++ b/css/main.scss
@@ -270,28 +270,21 @@ h2 {
 }
 
 .parallax-container{
-    height:300px;
+    height:auto;
+    overflow:visible;
 
     .masthead{
         background-color: rgba(0, 99, 175, 0.8);
-        position:absolute;
+        position:relative;
         align-items: center;
         justify-content: center;
         width:100%;
         height:100%;
-
-        .container-fluid{
-            img{
-                display:block;
-                position:relative;
-                left:auto;
-                bottom:auto;
-                min-width:auto;
-                min-height:auto;
-                transform: none;
-            }
-        }
     }
+}
+
+#site-content{
+    background-color:#ffffff;
 }
 
 .parallax{
